--- a/NBA.API/NBA.API/Web.config
+++ b/NBA.API/NBA.API/Web.config
@@ -9,6 +9,12 @@
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
+  <connectionStrings >
+    <add
+         name="myConnectionString"
+         connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=NBA;Integrated Security=True;Pooling=False;Connect Timeout=10"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
