--- a/NBA.API/NBA.API/NBA.API.csproj
+++ b/NBA.API/NBA.API/NBA.API.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Images\Teams\cle.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
